--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <title>Tic-Tac-Toe</title>
 </head>
 <body>
-  <h1>Tic-Tac-Toe</h1>
-  <h2 id="message">Message</h2>
-  <section class="board">
-    <div class="sqr" id="0"></div>
-    <div class="sqr" id="1"></div>
-    <div class="sqr" id="2"></div>
-    <div class="sqr" id="3"></div>
-    <div class="sqr" id="4"></div>
-    <div class="sqr" id="5"></div>
-    <div class="sqr" id="6"></div>
-    <div class="sqr" id="7"></div>
-    <div class="sqr" id="8"></div>
-  </section>
-  <button id="reset">Reset</button>
+  <div class="container">
+    <h1>Tic-Tac-Toe</h1>
+    <h2 id="message">Message</h2>
+    <section class="board">
+      <div class="sqr" id="0"></div>
+      <div class="sqr" id="1"></div>
+      <div class="sqr" id="2"></div>
+      <div class="sqr" id="3"></div>
+      <div class="sqr" id="4"></div>
+      <div class="sqr" id="5"></div>
+      <div class="sqr" id="6"></div>
+      <div class="sqr" id="7"></div>
+      <div class="sqr" id="8"></div>
+    </section>
+    <button id="reset">Reset</button>
+  </div>
 </body>
 </html>
